--- a/.env.example
+++ b/.env.example
@@ -12,3 +12,8 @@ NEXT_PUBLIC_CLERK_SIGN_IN_URL="/signin"
 NEXT_PUBLIC_CLERK_SIGN_UP_URL="/signup"
 NEXT_PUBLIC_CLERK_SIGN_IN_FALLBACK_URL="/"
 NEXT_PUBLIC_CLERK_SIGN_UP_FALLBACK_URL="/"
+
+# supabase
+NEXT_PUBLIC_SUPABASE_URL=https://yfhbwbwrktgfpczmqoo.supabase.co
+NEXT_PUBLIC_SUPABASE_ANON_KEY=your-anon-key-here
+SUPABASE_SERVICE_ROLE_KEY=your-service-role-key-here
