--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@radix-ui/react-tabs": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.2",
     "@remixicon/react": "^4.6.0",
+    "@supabase/supabase-js": "^2.49.4",
     "@swc/helpers": "^0.5.17",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -46,6 +47,8 @@
     "input-otp": "^1.2.4",
     "lucide-react": "^0.428.0",
     "mini-svg-data-uri": "^1.4.4",
+    "mongodb": "^6.16.0",
+    "mongoose": "^8.14.1",
     "next": "14.2.6",
     "next-themes": "^0.3.0",
     "react": "^18",
@@ -60,12 +63,14 @@
     "tailwind-scrollbar-hide": "^1.1.7",
     "tailwindcss-animate": "^1.0.7",
     "usehooks-ts": "^3.1.0",
+    "uuid": "^11.1.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/uuid": "^10.0.0",
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
     "postcss": "^8",
