--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "mongoose": "^8.14.1",
     "next": "14.2.6",
     "next-themes": "^0.3.0",
+    "plyr": "^3.7.8",
     "react": "^18",
     "react-day-picker": "^9.6.7",
     "react-dom": "^18",
